# inspect-robots-so101

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
outputs/: so101-checkpoints-report.md
src/inspect_robots_so101/: CLAUDE.md  __init__.py  config.py  embodiment.py  operator.py  packing.py  policy.py  preflight.py
src/robolens_soarm/: CLAUDE.md  __init__.py  config.py  embodiment.py  packing.py  policy.py  preflight.py
tests/: test_api_snapshot.py  test_compat.py  test_config.py  test_embodiment.py  test_eval_end_to_end.py  test_operator.py  test_packing.py  test_policy.py  test_preflight.py
