[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-so101"
version = "0.3.0"
description = "Inspect Robots adapters for LeRobot SO-ARM followers (SO-100/SO-101) driven by LeRobot policies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "vla", "so-arm", "so100", "so101", "lerobot", "inspect-robots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["inspect-robots>=0.3", "numpy>=1.24"]

[project.optional-dependencies]
# Real SO-ARM driver + in-process LeRobot policy inference (torch + the checkpoint).
# `lerobot[feetech]` pulls the Feetech motor bus the SO follower uses. lerobot>=0.5
# requires Python>=3.12, so the extra is gated to 3.12+ (the numpy-only core still
# imports on 3.10/3.11 — the hardware extra just isn't installable there). Without
# this marker `uv`'s universal resolution fails on the 3.10/3.11 splits.
lerobot = ["lerobot[feetech]>=0.5; python_version >= '3.12'"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
    # numpy 2.5.0's type stubs use 3.12-only syntax that mypy (python_version 3.10)
    # rejects; pin the 2.4.x line for a deterministic dev/CI gate (runtime is free).
    "numpy<2.5",
]

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots-so101"
Framework = "https://github.com/robocurve/inspect-robots"
LeRobot = "https://github.com/huggingface/lerobot"

# inspect-robots isn't on PyPI yet — resolve from a tagged GitHub release. lerobot IS on
# PyPI (the `lerobot` extra above). This is uv-only metadata (stripped from wheels).
# For local dev against a sibling inspect-robots checkout: uv pip install -e ../inspect-robots
[tool.uv.sources]
inspect-robots = { git = "https://github.com/robocurve/inspect-robots", tag = "v0.3.0" }

# Inspect Robots discovers these by entry point — no import needed for `inspect-robots list`.
[project.entry-points."inspect_robots.embodiments"]
so_arm = "inspect_robots_so101.embodiment:SOArmEmbodiment"

[project.entry-points."inspect_robots.policies"]
lerobot = "inspect_robots_so101.policy:LeRobotPolicy"

[project.scripts]
inspect-robots-so101-preflight = "inspect_robots_so101.preflight:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_so101"]

[tool.hatch.build.targets.sdist]
include = ["src/inspect_robots_so101", "tests", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots_so101"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/inspect_robots_so101"]

# torch / lerobot are lazily imported behind pragma'd seams and are not test deps;
# silence mypy's missing-import errors for them (mirrors inspect-robots-isaacsim).
[[tool.mypy.overrides]]
module = ["torch.*", "lerobot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["inspect_robots_so101"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",
    ": \\.\\.\\.$",
    "pragma: no cover",
]
